Fix definitivo (?) video in index compatibile con mobile e relativi fix dimensionamento

--- a/custom.less
+++ b/custom.less
@@ -134,3 +134,8 @@
         border-bottom-color: #ffffff;
     }
 }
+
+
+.video-wrap {
+    height: 100%;
+}
